k8s-logging/scripts/grafana_service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: grafana
    chart: grafana-3.12.1
    heritage: Tiller
    release: grafana
  name: grafana
spec:
  ports:
  - name: port-1
    port: 80
    protocol: TCP
    targetPort: 80
  - name: port-2
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
    release: grafana
  type: LoadBalancer
status:
  loadBalancer: {}
