k8s-logging/scripts/grafana-ingress-auth.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: grafana.spacemesh.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
  - host: prom.spacemesh.io
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-server
          servicePort: 80
